--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>{% block title %}Trade{% endblock %}</title>
+	<title>SKKU-뭐먹지?</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-	{% block extra-style %}{% endblock %}
 </head>
 
 <body style="padding-top:90px;">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <span class="navbar-brand mx-5 mb-0 font-weight-bold font-italic">SKKU-뭐먹지?</span>
+  <span class="navbar-brand mx-5 mb-0 font-weight-bold font-italic"><a class="navbar-brand" href="index.html">SKKU-뭐먹지?</a></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,35 +21,36 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item mx-1 btn">
-        <a class="nav-link" href="{% url 'home' %}">메인</a>
+        <a class="nav-link" href="map.html">음식점 지도</a>
       </li>
       <li class="nav-item mx-1 btn">
-        <a class="nav-link" href="{% url 'list:index' %}">음식점 리스트</a>
+        <a class="nav-link" href="list.html">음식점 리스트</a>
       </li>
-      <li class="nav-item dropdown mx-1 btn">
-        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-          유틸리티
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="{% url 'admin:index' %}">관리자</a>
-        </div>
+      <li class="nav-item mx-1 btn">
+        <a class="nav-link" href="search.html">음식점 검색</a>
       </li>
     </ul>
   </div>
 </nav>
 
-<div class="container">
-	{% block content %}{% endblock %}
-</div>
+<img style="height: 500px" class="mx-auto d-block" src="main.jpg">
+	<div class="home-image">
+	</div>
 
-{% block footer %}{% endblock %}
+	<hr style="margin: 10px 0;">
+
+   	<div class="row">
+   		<div class="col-sm-6 mx-auto">
+   			<h3>SKKU 온라인 식당 추천 시스템</h3>
+   			<p>오늘 점심, 저녁으로 무엇을 먹을지 고민중이신가요? 저희 웹사이트를 통해 빠르게 결정하세요!</p>
+   		</div>
+   	</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/0a612614d9.js" crossorigin="anonymous"></script>
 
-{% block extra-script %}{% endblock %}
 
 </body>
 </html>
