add sample restaurants

--- a/list.html
+++ b/list.html
@@ -33,6 +33,33 @@
   </div>
 </nav>
 
+<table class="table mx-auto mt-5" style="width: 1000px">
+  <thead>
+    <tr>
+      <th scope="col">식당</th>
+      <th scope="col">카테고리</th>
+      <th scope="col">위치</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>포크포크매콤돈가스&칡불냉면</td>
+      <td>돈까스, 우동</td>
+      <td>경기 수원시 장안구 서부로2106번길 14 1층</td>
+    </tr>
+    <tr>
+      <td>인마루 수원성대점</td>
+      <td>일식집</td>
+      <td>경기 수원시 장안구 서부로2106번길 22</td>
+    </tr>
+    <tr>
+      <td>명동생돈까스</td>
+      <td>돈까스, 우동</td>
+      <td>경기 수원시 장안구 서부로2106번길 17</td>
+    </tr>
+  </tbody>
+</table>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
