--- a/list2.html
+++ b/list2.html
@@ -43,114 +43,114 @@
   </thead>
   <tbody>
     <tr>
-      <td>중경마라탕 3호점</td>
-      <td>중식</td>
-      <td>경기 수원시 장안구 서부로2106번길 10</td>
-    </tr>
-    <tr>
-      <td>포크포크매콤돈가스&칡불냉면</td>
-      <td>돈까스, 우동</td>
-      <td>경기 수원시 장안구 서부로2106번길 14 1층</td>
-    </tr>
-    <tr>
-      <td>인마루 수원성대점</td>
-      <td>일식집</td>
-      <td>경기 수원시 장안구 서부로2106번길 22</td>
-    </tr>
-    <tr>
-      <td>명동생돈까스</td>
-      <td>돈까스, 우동</td>
-      <td>경기 수원시 장안구 서부로2106번길 17</td>
-    </tr>
-    <tr>
-      <td>밀플랜비 성균관대점</td>
-      <td>패스트푸드</td>
-      <td>경기 수원시 장안구 서부로2106번길 22 1층</td>
-    </tr>
-    <tr>
-      <td>본찌 돈까스 성대점</td>
-      <td>돈까스, 우동</td>
-      <td>경기 수원시 장안구 서부로2106번길 26-2</td>
-    </tr>
-    <tr>
-      <td>벨라튀니지</td>
+      <td>오덮밥</td>
       <td>퓨전요리</td>
-      <td>경기 수원시 장안구 서부로2106번길 21 지하 1층</td>
-    </tr>
-    <tr>
-      <td>한솥도시락 수원성대점</td>
-      <td>도시락</td>
-      <td>경기 수원시 장안구 서부로 2112</td>
-    </tr>
-    <tr>
-      <td>왕돈까스</td>
-      <td>돈까스, 우동</td>
-      <td>경기 수원시 장안구 서부로2106번길 21</td>
-    </tr>
-    <tr>
-      <td>일미닭갈비파전 성대점</td>
-      <td>닭요리</td>
-      <td>경기 수원시 장안구 서부로2106번길 26-3</td>
-    </tr>
-    <tr>
-      <td>알촌</td>
-      <td>한정식</td>
-      <td>경기 수원시 장안구 서부로2106번길 32</td>
-    </tr>
-    <tr>
-      <td>낮것상칼국수</td>
-      <td>국수</td>
-      <td>경기 수원시 장안구 서부로2106번길 36-4</td>
-    </tr>
-    <tr>
-      <td>히토리</td>
-      <td>일식</td>
-      <td>경기 수원시 장안구 서부로2112 1층 103호</td>
-    </tr>
-    <tr>
-      <td>비에뜨반미 수원성대점</td>
-      <td>베트남음식</td>
-      <td>경기 수원시 장안구 서부로2126번길 29</td>
-    </tr>
-    <tr>
-      <td>BBQ 수원성대역점</td>
-      <td>치킨</td>
-      <td>경기 수원시 장안구 서부로2126번길 27 1층</td>
-    </tr>
-    <tr>
-      <td>바바플</td>
-      <td>제과, 베이커리</td>
-      <td>경기 수원시 장안구 서부로2126번길 30 101호</td>
-    </tr>
-    <tr>
-      <td>지코바 율전점</td>
-      <td>치킨</td>
-      <td>경기 수원시 장안구 서부로2126번길 17 1층</td>
-    </tr>
-    <tr>
-      <td>본도시락 수원성균관대점</td>
-      <td>도시락</td>
-      <td>경기 수원시 장안구 서부로2126번길 30</td>
-    </tr>
-    <tr>
-      <td>봉구스밥버거 수원성대2호점</td>
-      <td>주먹밥</td>
-      <td>경기 수원시 장안구 서부로2126번길 30 1층</td>
-    </tr>
-    <tr>
-      <td>순희네떡달</td>
-      <td>떡볶이</td>
       <td>경기 수원시 장안구 서부로2126번길 24</td>
+    </tr>
+    <tr>
+      <td>일미리금계찜닭 수원성균관대점</td>
+      <td>돈까스, 우동</td>
+      <td>경기 수원시 장안구 서부로2126번길 18 1층</td>
+    </tr>
+    <tr>
+      <td>고피자 수원성대점</td>
+      <td>피자</td>
+      <td>경기 수원시 장안구 서부로2126번길 18</td>
+    </tr>
+    <tr>
+      <td>먹거리고을</td>
+      <td>호프, 요리주점</td>
+      <td>경기 수원시 장안구 서부로2126번길 10</td>
+    </tr>
+    <tr>
+      <td>힌카쿠</td>
+      <td>일식집</td>
+      <td>경기 수원시 장안구 서부로2126번길 10</td>
+    </tr>
+    <tr>
+      <td>맘스터치 수원성균관대점</td>
+      <td>패스트푸드</td>
+      <td>경기 수원시 장안구 서부로2128 2층</td>
+    </tr>
+    <tr>
+      <td>노랑통닭 성균관대점</td>
+      <td>치킨</td>
+      <td>경기 수원시 장안구 화산로213번길 32</td>
+    </tr>
+    <tr>
+      <td>청년밥상</td>
+      <td>한식</td>
+      <td>경기 수원시 장안구 서부로 2136번길 10 1층</td>
+    </tr>
+    <tr>
+      <td>성대밥상</td>
+      <td>한식</td>
+      <td>경기 수원시 장안구 서부로2126번길 50-10 1층</td>
+    </tr>
+    <tr>
+      <td>탕화쿵푸마라탕</td>
+      <td>중식</td>
+      <td>경기 수원시 장안구 서부로2105번길 12</td>
+    </tr>
+    <tr>
+      <td>최고집원조수구레</td>
+      <td>육류, 고기</td>
+      <td>경기 수원시 장안구 서부로2107 1층</td>
+    </tr>
+    <tr>
+      <td>춘천닭갈비칡냉면</td>
+      <td>닭요리</td>
+      <td>경기 수원시 장안구 화산로233번길 64 1층</td>
+    </tr>
+    <tr>
+      <td>만다김밥</td>
+      <td>분식</td>
+      <td>경기 수원시 장안구 서부로2105 16-6 1층</td>
+    </tr>
+    <tr>
+      <td>항아리보쌈 성대직영점</td>
+      <td>족발, 보쌈</td>
+      <td>경기 수원시 장안구 화산로233번길 64 2층</td>
+    </tr>
+    <tr>
+      <td>미가</td>
+      <td>일본식라면</td>
+      <td>경기 수원시 장안구 화산로233번길 59</td>
+    </tr>
+    <tr>
+      <td>차돌풍 수원성대점</td>
+      <td>육류, 고기</td>
+      <td>경기 수원시 장안구 화산로233번길 62 1층</td>
+    </tr>
+    <tr>
+      <td>담은샤브칼국수</td>
+      <td>샤브샤브</td>
+      <td>경기 수원시 장안구 화산로233번길 60</td>
+    </tr>
+    <tr>
+      <td>성대양꼬치&훠궈</td>
+      <td>양꼬치</td>
+      <td>경기 수원시 장안구 화산로233번길 54</td>
+    </tr>
+    <tr>
+      <td>백령도생바지락칼국수</td>
+      <td>국수</td>
+      <td>경기 수원시 장안구 화산로233번길 49</td>
+    </tr>
+    <tr>
+      <td>박가네숯불닭갈비</td>
+      <td>닭요리</td>
+      <td>경기 수원시 장안구 화산로233번길 46</td>
     </tr>
   </tbody>
 </table>
 
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
+    <li class="page-item"><a class="page-link" href="list.html">1</a></li>
     <li class="page-item active" aria-current="page">
-      <a class="page-link" href="#">1</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="list2.html">2</a></li>
+        <a class="page-link" href="#">2</a>
+      </li>
     <li class="page-item"><a class="page-link" href="list3.html">3</a></li>
   </ul>
 </nav>
