--- a/list2.html
+++ b/list2.html
@@ -49,7 +49,7 @@
     </tr>
     <tr>
       <td>일미리금계찜닭 수원성균관대점</td>
-      <td>돈까스, 우동</td>
+      <td>닭요리</td>
       <td>경기 수원시 장안구 서부로2126번길 18 1층</td>
     </tr>
     <tr>
