--- a/list3.html
+++ b/list3.html
@@ -114,7 +114,7 @@
     </tr>
     <tr>
       <td>보리네주먹고기</td>
-      <td>삼격살</td>
+      <td>삼겹살</td>
       <td>경기 수원시 장안구 율전로98번길 6-9</td>
     </tr>
     <tr>
