--- a/map.html
+++ b/map.html
@@ -7,6 +7,67 @@
 
 	<title>SKKU-뭐먹지?</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+        /* 너비와 높이가 지정되어 있지 않으면 지도가 읽어지지 않음(에러는 안남, 안보임) */
+        #map{
+            width: 100%;
+            height: 800px;
+        }
+    </style>
+ 
+    <!-- Google 지도 api 사용 스크립트 추가 -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWx4XWykq-D6avipBaQaRVN_nr3fkjBNU&callback=initMap"async defer></script>
+ 
+    <script>
+        function showMap(){
+            //지도가 보여질 요소 찾아오기
+            var e= document.getElementById('map');
+ 
+            // Goolgle지도 객체 생성 및 e요소 보여주기!!
+            new google.maps.Map(e, {center:{lat:37.29715061855119, lng:126.97129138783319}, zoom:17});
+        }
+        function showMarker(){
+	     var e= document.getElementById('map');
+             var folkfolk= new google.maps.LatLng( 37.29681430923355, 126.97142148572466);
+
+            // 표시되는 지도의 옵션 객체
+            var opts= {
+                center: folkfolk,
+                zoom: 17
+            };
+
+	    var map=new google.maps.Map( e , opts );
+
+             var skku=[
+                    ['포크포크매콤돈까스', 37.29681430923355, 126.97142148572466],
+                    ['중경마라탕3호점', 37.296808034009764, 126.97150184346668],
+                    ['인마루', 37.29711078879305, 126.97157223300627],
+                    ['명동생돈까스', 37.29699303523626, 126.97123522873798]
+                ];
+ 
+                for(var i=0; i<skku.length; i++){
+                    var title= skku[i][0];
+                    var pos= new google.maps.LatLng(skku[i][1], skku[i][2]);
+ 
+                    var m= new google.maps.Marker({
+                        position: pos,
+                        title: title,
+                        icon: "./button-red2.png",
+                        map: map,
+                    });
+ 
+                    m.addListener('click', function(){
+                        alert(this.getTitle());
+                    })
+ 
+            }
+ 
+        }
+    </script>
+ 
+
+
+
 
 </head>
 
@@ -34,7 +95,11 @@
 </nav>
 
 <div>
-  <img src = "map-color.png" height = "600" width = "1000">
+    <button onclick="showMap()">성대 지도 보기</button>
+    <button onclick="showMarker()">음식점 위치 보기</button>
+ 
+    <!-- 지도 타일 이미지들을 보여줄 영역 div요소 -->
+    <div id="map"></div>   
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
